getting offer from bd and #2